# hackaton_2023

./: .gitignore  README.md  docker-compose.yml
Intersection/rectangle/: CMakeLists.txt  main.cpp
client/: index.html  package-lock.json  package.json  start.sh
client/src/: App.tsx  main.tsx  server-info.ts  web-socket.ts
client/src/components/: index.ts
client/src/components/CameraSettings/: Buttons.tsx  CameraSettings.tsx  ZonesList.tsx
client/src/components/Cameras/: CameraAdd.tsx  CameraItem.tsx  Cameras.scss  CamerasList.tsx
client/src/components/Canvas/: Anchor.tsx  Canvas.scss  Canvas.tsx
client/src/components/CanvasSelection/: CanvasSelection.scss  CanvasSelection.tsx
client/src/components/Video/: Video.tsx  VideoCopy.tsx
client/src/store/: cameraReducer.ts  canvasPointsReducer.ts  index.ts
client/src/store/Reducers/: cameraAddReducer.ts  cameraReducer.ts  cameraSelectionReducer.ts
client/src/styles/: main.scss  settings.scss
cpp/: CMakeLists.txt  conanfile.txt  database.cfg
cpp/neural_network/: CMakeLists.txt  main.cpp
cpp/neural_network/include/: NeuralNetwork.h
cpp/neural_network/src/: NeuralNetwork.cpp
cpp/server/: CMakeLists.txt  main.cpp
cpp/server/include/: db_worker.h  server.h  websocket.h
cpp/server/src/: db_worker.cpp  server.cpp  websocket.cpp
cpp/utils/: config_parser.h
intersection/: CMakeLists.txt  intersection_and_polygon.cpp
scripts/: database.sql  hackaton.sql  triger_v2.sql
server/: go.mod  main.go
